# macro-expectations-engine

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: backtest_results.parquet  etf_prices.parquet  event_studies.parquet  implied_expectations.parquet  low_confidence_mapping.csv  macro_event_calendar.parquet  macro_surprises.parquet  market_event_mapping.parquet  official_macro_data.parquet  placebo_dates.parquet  placebo_results.parquet  placebo_signs.parquet  regime_classifications.parquet
data/kalshi/: kalshi_markets.parquet  kalshi_prices.parquet
reports/tables/: backtest_table.txt  event_study_table.txt  robustness_table.txt  summary_table.txt
scripts/: build_event_calendar.py  build_market_mapping.py  build_regime_model.py  compute_implied_expectations.py  compute_surprises.py  fetch_kalshi.py  fetch_macro_data.py  fetch_price_data.py  generate_report.py  run_backtest.py  run_event_studies.py  run_robustness_checks.py
src/macro_engine/: __init__.py
src/macro_engine/backtest/: __init__.py  signals.py  strategy.py  walk_forward.py
src/macro_engine/config/: __init__.py  settings.py
src/macro_engine/events/: __init__.py  calendar.py
tests/: test_bayesian.py  test_bucket_parsing.py  test_confounding.py  test_event_calendar.py  test_event_time_alignment.py  test_factor_model.py  test_integration.py  test_market_mapping.py  test_microstructure.py  test_no_lookahead.py  test_probability_conversion.py  test_return_windows.py  test_surprise_calculation.py  test_surprise_decomposition.py  test_walk_forward.py
(+30 files in other folders)
